#19 Like overflow fix

--- a/src/kit/blocks/feedback/feedback.scss
+++ b/src/kit/blocks/feedback/feedback.scss
@@ -18,6 +18,8 @@
   }
 
   &__image {
+    align-self: center;
+    justify-self: center;
     border: 2px solid white;
     border-radius: 50%;
     box-shadow: $shadow-small;
